--- a/specialmenu.html
+++ b/specialmenu.html
@@ -39,7 +39,7 @@
                     <li><a href="index.html#shedule" class="navhov"> Working Hours</a></li>
                     <li><a href="index.html#chefs" class="navhov"> Chefs</a></li>
                     <li><a href="index.html#reservation" class="navhov"> Reservation</a></li>
-                    <li><a href="#" class="navhov"> About US</a></li>
+                    <li><a href="aboutus.html" class="navhov"> About US</a></li>
                     <li><a href="#footer" class="navhov"> Contacts</a></li>
                 </ul>
             </nav>
