creating video with kitchen using iframe

--- a/aboutus.html
+++ b/aboutus.html
@@ -74,18 +74,26 @@
                     city, overlooking the bustling boulevards and picturesque avenues.
             </div>
         </section>
+        <h1 id="awardsh1">Our awards</h1>
+        <section id="awards">
+            <div class="award award1"></div>
+            <div class="award award2"></div>
+            <div class="award award3"></div>
+            <div class="award award4"></div>
+            <div class="award award5"></div>
+        </section>
+        <h1 id="kitchenh1">Kitchen</h1>
+        <section id="kitchen">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Ipe9xJCfuTM?si=Sa-nnjdX4B8sf0tP"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
         <h1 id="locationh1">Location</h1>
         <section id="location">
             <iframe loading="lazy" allowfullscreen
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.773436991657!2d-122.0820073486002!3d37.4220052798196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fbb07b1e1f721%3A0xb0db77853b6cb7ed!2sGolden%20Gate%20Bridge!5e0!3m2!1sen!2sus!4v1619116785727!5m2!1sen!2sus">
             </iframe>
-        </section>
-        <section id="awards">
-            <div class="awardcont"></div>
-            <div class="awardcont"></div>
-            <div class="awardcont"></div>
-            <div class="awardcont"></div>
-            <div class="awardcont"></div>
         </section>
     </main>
     <footer class="pinkfot" id="footer">
