making about us section responsive for tablets

--- a/aboutus.html
+++ b/aboutus.html
@@ -55,7 +55,7 @@
         </div>
     </header>
     <main>
-        <h1 id="historyh1">Our history</h1>
+        <h1 id="historyh1">Our History</h1>
         <section id="history">
 
             <div class="histlogo">
@@ -74,13 +74,12 @@
                     city, overlooking the bustling boulevards and picturesque avenues.
             </div>
         </section>
-        <h1 id="awardsh1">Our awards</h1>
+        <h1 id="awardsh1">Our Awards</h1>
         <section id="awards">
             <div class="award award1"></div>
             <div class="award award2"></div>
             <div class="award award3"></div>
             <div class="award award4"></div>
-            <div class="award award5"></div>
         </section>
         <h1 id="kitchenh1">Kitchen</h1>
         <section id="kitchen">
@@ -88,6 +87,21 @@
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div id="kitchenp">
+            <p>The kitchen is the heart of any restaurant, where culinary magic unfolds, flavors mingle,
+                and dishes come to life. It's a place where creativity meets craftsmanship, and where the passion for
+                food is transformed into memorable dining experiences.
+
+                In the kitchen, talented chefs orchestrate a symphony of flavors, combining fresh ingredients,
+                innovative techniques, and time-honored recipes to create culinary masterpieces. It's a place where
+                precision and attention to detail are paramount, where every cut, every seasoning, and every cooking
+                method is carefully considered to achieve perfection on the plate.
+
+                Beyond its role as a workspace, the kitchen is a bustling hub of activity, where teamwork and
+                camaraderie are essential. Chefs work together seamlessly, communicating through a language of sizzles,
+                sautés, and simmering sauces to ensure that each dish is executed flawlessly and delivered to diners
+                with pride.</p>
+            </div>
         </section>
         <h1 id="locationh1">Location</h1>
         <section id="location">
