fixing footer navigation

--- a/specialmenu.html
+++ b/specialmenu.html
@@ -181,12 +181,12 @@
                 <p>Italian de luxe</p>
             </div>
             <div class="fotnav">
-                <a href="">Menu</a>
-                <a href="">Working Hours</a>
-                <a href="">Chefs</a>
-                <a href="">Reservation</a>
-                <a href="">AboutUs</a>
-                <a href="">Contacts</a>
+                <a href="menu.html">Menu</a>
+                <a href="index.html#shedule">Working Hours</a>
+                <a href="index.html#chefs">Chefs</a>
+                <a href="index.html#reservation">Reservation</a>
+                <a href="aboutus.html">AboutUs</a>
+                <a href="#footer">Contacts</a>
             </div>
             <div class="foticon">
                 <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
