Fixing menu h2 and making responsive

--- a/aboutus.html
+++ b/aboutus.html
@@ -49,7 +49,7 @@
             <p>Italian De Luxe</p>
         </div>
         <div class="menuheadcontainer">
-            <div id="menuhead">
+            <div id="abmenuhead">
                 <p class="navhov">Menu</p>
             </div>
         </div>
