--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </section>
         <section id="reservation">
             <h1>Reservation</h1>
-            <form class="reservinput" action="">
+            <form class="reservinput" action="https://formdump.codeinstitute.net" method="post">
                 <input type="text" name="firtsname" placeholder="Name" required>
                 <input type="text" name="lastsname" placeholder="Surname" required>
                 <input type="number" name="phone-number" placeholder="Phone Number" required>
