Adding some Comments

--- a/aboutus.html
+++ b/aboutus.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+    <!--Header-->
     <header id="aboutusheadbg">
         <h2><a href="index.html">Fiorente</a></h2>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
@@ -54,7 +55,9 @@
             </div>
         </div>
     </header>
+    <!--Main-->
     <main>
+        <!--History Section-->
         <h1 id="historyh1">Our History</h1>
         <section id="history">
 
@@ -74,6 +77,7 @@
                     city, overlooking the bustling boulevards and picturesque avenues.
             </div>
         </section>
+        <!--Awards Section-->
         <h1 id="awardsh1">Our Awards</h1>
         <section id="awards">
             <div class="award award1"></div>
@@ -81,6 +85,7 @@
             <div class="award award3"></div>
             <div class="award award4"></div>
         </section>
+        <!--Kitchen Section-->
         <h1 id="kitchenh1">Kitchen</h1>
         <section id="kitchen">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/Ipe9xJCfuTM?si=Sa-nnjdX4B8sf0tP"
@@ -103,6 +108,7 @@
                 with pride.</p>
             </div>
         </section>
+        <!--Location Section-->
         <h1 id="locationh1">Location</h1>
         <section id="location">
             <iframe loading="lazy" allowfullscreen
@@ -110,6 +116,7 @@
             </iframe>
         </section>
     </main>
+    <!--Footer-->
     <footer class="pinkfot" id="footer">
         <div class="fotdiv">
             <div class="fotlogo">
