--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+    <!--Header-->
     <header>
         <h2><a href="index.html">Fiorente</a></h2>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
@@ -54,7 +55,9 @@
             </div>
         </div>
     </header>
+    <!--Main-->
     <main>
+        <!--Shedule Section-->
         <section id="shedule">
             <h1>Working Hours</h1>
             <div class="menushed">
@@ -75,6 +78,7 @@
                 </div>
             </div>
         </section>
+        <!--Chefs Section-->
         <section id="chefs">
             <h1>Chefs</h1>
             <div class="chefsphotos">
@@ -94,6 +98,7 @@
 
             </div>
         </section>
+        <!--Reservation Section-->
         <section id="reservation">
             <h1>Reservation</h1>
             <form class="reservinput" action="https://formdump.codeinstitute.net" method="post">
@@ -139,6 +144,7 @@
                 </div>
         </section>
     </main>
+    <!--Footer-->
     <footer id="footer">
         <div class="fotdiv">
             <div class="fotlogo">
