--- a/menu.html
+++ b/menu.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+    <!--Header-->
     <header id="menuheadbg">
         <h2><a href="index.html">Fiorente</a></h2>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
@@ -54,6 +55,7 @@
             </div>
         </div>
     </header>
+    <!--Main-->
     <main>
         <section id="mainmenu">
             <div class="mainmenuheader">
@@ -169,6 +171,7 @@
             </div>
         </section>
     </main>
+    <!--Footer-->
     <footer id="footer">
         <div class="fotdiv">
             <div class="fotlogo">
