--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="menuheadcontainer">
             <div id="menuhead">
-                <p class="navhov">Menu</a>
+                <p class="navhov">Menu</p>
             </div>
         </div>
     </header>
