--- a/aboutus.html
+++ b/aboutus.html
@@ -47,11 +47,11 @@
         </div>
         <div class="logo">
             <h1>About<br>Fiorente</h1><br>
-            <p>Italian De Luxe</p>
+            <p>French De Luxe</p>
         </div>
         <div class="menuheadcontainer">
             <div id="abmenuhead">
-                <p class="navhov">Menu</p>
+                <a href="menu.html"><p class="navhov4">Menu</p></a>
             </div>
         </div>
     </header>
@@ -121,7 +121,7 @@
         <div class="fotdiv">
             <div class="fotlogo">
                 <h2>Fiorente</h2>
-                <p>Italian de luxe</p>
+                <p>French de luxe</p>
             </div>
             <div class="fotnav">
                 <a href="menu.html">Menu</a>
