fixing some bugs

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
         </div>
         <div class="menuheadcontainer">
             <div id="menuhead">
-                <a href="menu.html"><p class="navhov">Menu</p></a>
+                <a href="menu.html">
+                    <p class="navhov">Menu</p>
+                </a>
             </div>
         </div>
     </header>
@@ -138,10 +140,10 @@
                 </textarea>
 
 
-                <button type="input">Reserv</button>
+                <button>Reserv</button>
 
 
-                </div>
+            </form>
         </section>
     </main>
     <!--Footer-->
@@ -152,12 +154,12 @@
                 <p>French de luxe</p>
             </div>
             <div class="fotnav">
-               <a href="menu.html">Menu</a>
-               <a href="index.html#shedule">Working Hours</a>
-               <a href="index.html#chefs">Chefs</a>
-               <a href="index.html#reservation">Reservation</a>
-               <a href="aboutus.html">AboutUs</a>
-               <a href="#footer">Contacts</a>
+                <a href="menu.html">Menu</a>
+                <a href="index.html#shedule">Working Hours</a>
+                <a href="index.html#chefs">Chefs</a>
+                <a href="index.html#reservation">Reservation</a>
+                <a href="aboutus.html">AboutUs</a>
+                <a href="#footer">Contacts</a>
             </div>
             <div class="foticon">
                 <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
