fixing html bugs with headings and iframe border

--- a/aboutus.html
+++ b/aboutus.html
@@ -62,10 +62,10 @@
         <section id="history">
 
             <div class="histlogo">
-                <h1>Founded in 1976</h1>
+                <h2>Founded in 1976</h2>
             </div>
             <div class="histtext">
-                <h1>The most famous restaurant in Paris</h1>
+                <h2>The most famous restaurant in Paris</h2>
                 <p>Nestled in the heart of Paris, "Fiorente" is more than just a restaurant; it's a testament to the
                     enduring spirit of Italian culinary tradition in the heart of the French capital. Established in the
                     early 20th century by the visionary chef Giovanni Rossi, "Fiorente" emerged as a beacon of Italian
@@ -80,6 +80,7 @@
         <!--Awards Section-->
         <h1 id="awardsh1">Our Awards</h1>
         <section id="awards">
+            <h1 class ="hided">Awards</h1>
             <div class="award award1"></div>
             <div class="award award2"></div>
             <div class="award award3"></div>
@@ -88,8 +89,9 @@
         <!--Kitchen Section-->
         <h1 id="kitchenh1">Kitchen</h1>
         <section id="kitchen">
+            <h1 class ="hided">Kitchen</h1>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/Ipe9xJCfuTM?si=Sa-nnjdX4B8sf0tP"
-                title="YouTube video player" frameborder="0"
+                title="YouTube video player" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <div id="kitchenp">
@@ -111,6 +113,7 @@
         <!--Location Section-->
         <h1 id="locationh1">Location</h1>
         <section id="location">
+            <h1 class ="hided">Location</h1>
             <iframe loading="lazy" allowfullscreen
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.773436991657!2d-122.0820073486002!3d37.4220052798196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fbb07b1e1f721%3A0xb0db77853b6cb7ed!2sGolden%20Gate%20Bridge!5e0!3m2!1sen!2sus!4v1619116785727!5m2!1sen!2sus">
             </iframe>
