--- a/index.html
+++ b/index.html
@@ -134,10 +134,7 @@
                     <option>21:00</option>
                     <option>22:00</option>
                 </select>
-                <textarea placeholder="Do you have some special requirements?(optional)">
-
-
-                </textarea>
+                <textarea placeholder="Do you have some special requirements?(optional)"></textarea>
 
 
                 <button>Reserv</button>
