Rename menu and about us files

--- a/gourment_menu.html
+++ b/gourment_menu.html
@@ -40,7 +40,7 @@
                     <li><a href="index.html#shedule" class="navhov"> Working Hours</a></li>
                     <li><a href="index.html#chefs" class="navhov"> Chefs</a></li>
                     <li><a href="index.html#reservation" class="navhov"> Reservation</a></li>
-                    <li><a href="aboutus.html" class="navhov"> About US</a></li>
+                    <li><a href="about_us.html" class="navhov"> About US</a></li>
                     <li><a href="#footer" class="navhov"> Contacts</a></li>
                 </ul>
             </nav>
@@ -51,7 +51,7 @@
         </div>
         <div class="menuheadcontainer">
             <div id="menuhead">
-                <a href="aboutus.html"><p class="navhov">About Us</p></a>
+                <a href="about_us.html"><p class="navhov">About Us</p></a>
             </div>
         </div>
     </header>
@@ -59,22 +59,39 @@
     <main>
         <section id="mainmenu">
             <div class="mainmenuheader">
-                <a href="menu.html#mainmenu" class="navhov">
+                <a href="menu.html#mainmenu"  class="navhov">
                     <h2>Standart Menu</h2>
                 </a>
 
-                <a href="specialmenu.html#mainmenu" class="navhov navhov3">
+                <a href="special_menu.html#mainmenu"  class="navhov">
                     <h2>Special Menu</h2>
                 </a>
 
-                <a href="gourmentmenu.html#mainmenu" class="navhov">
+                <a href="gourment_menu.html#mainmenu"  class="navhov navhov3">
                     <h2>Gourment Menu</h2>
                 </a>
             </div>
             <div class="dishes">
                 <div>
-                    <h3>Piatti</h3>
+                    <h3>Pizza</h3>
 
+                    <p>MARGHERITA $17<br>
+                        San Marzano tomato , mozzarella, basil, parmesan</p>
+                    <br><br>
+                    <p>SPICY SOPPRESSATA $19<br>
+                        San Marzano tomato , mozzarella, basil, local honey</p>
+                    <br><br>
+                    <p>REGINA COLLETTA $20<br>
+                        mozzarella, garlic, ricotta, arugula, parmesan, aged balsamic, Prosciutto</p>
+                    <br><br>
+                    <p>SAUSAGE $19<br>
+                        San Marzano tomato , smoked mozzarella, red onion</p>
+                    <br><br>
+                    <p>ZUCCHINI $24<br>
+                        mozzarella, garlic, ricotta, artichoke, red onion, spring onion pesto, burrata</p>
+                </div>
+                <div>
+                    <h3>Piatti</h3>
                     <p>CHICKEN PARMESAN $32<br>
                         Crispy Joyce Farms breast, spaghetti, vodka sauce, mozzarella, parmesan, basil</p>
                     <br><br>
@@ -94,84 +111,61 @@
                     <h3>Pranza</h3>
                     <p>CHICKEN PARMESAN $37<br>
                         Crispy Joyce Farms breast, spaghetti, vodka sauce, mozzarella, parmesan, basil</p>
-                    <br><br>
+                    <br>
+                    <br>
                     <p>RIGATONI CAB $27<br>
                         Bolognese, tomato, basil, parmesan, burrata</p>
-                    <br><br>
+                    <br>
+                    <br>
                     <p>CACIO E PEPE $28<br>
                         mozzarella, garlic, ricotta, arugula, parmesan, aged balsamic, Prosciutto</p>
-                    <br><br>
-                    <p>TAGLIATELLE $25<br>
+                    <br>
+                    <br>
+                    <p>
+                        TAGLIATELLE $25<br>
                         San Marzano tomato , smoked mozzarella, red onion </p>
+                    <br>
+                    <br>
+                    <p>
+                        
+                BUTTERNUT SQUASH RISOTTO $26<br>
+                mozzarella, garlic, ricotta, artichoke, red onion, spring onion pesto, burrata</p>
+                </div>
+                <div>
+                    <h3>White Wine</h3>
+                    <p>FRIULANO, Venica & Venica , Friuli-Venezia-Giulia, Italy 2020</p>
                     <br><br>
-                    <p>BUTTERNUT SQUASH RISOTTO $26
-                        <br>
-                        mozzarella, garlic, ricotta, artichoke, red onion, spring onion pesto, burrata
+                    <p>GAVI DI GAVI, Palladino, Piedmont, Italy 2020</p>
+                    <br><br>
+                    <p>GRECO DI TUFO, Mastroberardino , Campania, Italy 2020</p>
+                    <br><br>
+                    <p>ROERO ARNEIS, Malabaila Di Canale, “Le Tre”, Piedmont, Italy 2021</p>
+                    <br><br>
+                    <p>KERNER, Abbazia di Novacella, Trentino-Alto Adige, Italy 2022</p>
+                    <br><br>
+                    <p> SAUVIGNON BLANC, Hunky Dory, Marlborough, New Zealand 2022
                     </p>
                 </div>
                 <div>
-                    <h3>Antipasti</h3>
-                    <p>FOCACCIA $32<br>
-                        Rosemary, oregano, olive oil, sea salt, parmesan</p>
-                    <br>
-                    <br>
-                    <p>CAESAR $28<br>
-                        Romaine, focaccia croutons, parmesan, lemon Caesar</p>
-                    <br>
-                    <br>
-                    <p>ARUGULA $23<br>
-                        Arborio rice, pea, mint, parmesan, proscuitto</p>
-                    <br>
-                    <br>
-                    <p>
-                        POLPETTE $25<br>
-                        Daily salami and cured meats, rotating cheese</p>
-                    <br>
-                    <br>
-                    <p>
-                        CRISPY CLAM STRIPS $34<br>
-                        Besciamela, beef Bolognese, basil</p>
-                    <br>
-                    <br>
-                    <p>
-                        MUSSELS $34<br>
-                        Lemon, salsa verde aioli, parsley</p>
-                </div>
-                <div>
-                    <h3>Desserts</h3>
-                    <p>TIRAMISU 15$<br>
-                        Cocoa nib nougatine, coffee chocolate sauce $14</p>
+                    <h3>Red Wine</h3>
+                    <p>NEBBIOLO, Giuseppe Cortese Langhe, Piedmont 2020
                     <br><br>
-                    <p>ORANGE + DARK CHOCOLATE BONET 16$<br>
-                        Orange flavored caramel, amaretti cookies, confit orange</p>
-                    <br><br>
-                    <p>SPUMONI SEMIFREDDO ALASKA $15<br>
-                        Cherry coulis, chocolate shavings</p>
-                    <br><br>
-                    <p>LEMON RICOTTA PANNA COTTA  $13<br>
-                        Honey lemon, vanilla bean meringue, candied kumquat</p>
+                    <p>BAROLO, Fratelli Revello, Piedmont 2018
                     <br><br>
                     <p>
-                        STRAWBERRY SHORTCAKE  $15<br>
-                        Almond butter cake, compressed strawberries, basil snow, almond cremeux, basil oil</p>
+                        BAROLO, Renato Corino, La Morra, Piedmont 2018</p>
                     <br><br>
-                </div>
-                <div>
-                    <h3>Wine</h3>
-                    <p>FRIULANO, Venica & Venica , Friuli-Venezia-Giulia, Italy 2020 </p>
+                    <p>VALPOLICELLA, Pra “Morandina”, Veneto 2021</p>
                     <br><br>
-                    <p>GAVI DI GAVI, Palladino, Piedmont, Italy 2020 </p>
+                    <p>CHIANTI CLASSICO RISERVA, Castello di Volpaia, Tuscany 2018</p>
                     <br><br>
-                    <p>
-                        GRECO DI TUFO, Mastroberardino , Campania, Italy 2020</p>
+                    <p>ROSSO DI MONTALCINO, Il Poggione, Tuscany 2019</p>
                     <br><br>
-                    <p>
-                        ROERO ARNEIS, Malabaila Di Canale, “Le Tre”, Piedmont, Italy 2021</p>
+                    <p>BRUNELLO DI MONTALCINO, Piancornello, Montalcino, 2017</p>
                     <br><br>
-                    <p>
-                        KERNER, Abbazia di Novacella, Trentino-Alto Adige, Italy 2022</p>
+                    <p>NEBBIOLO, Giuseppe Cortese Langhe, Piedmont 2020</p>
                     <br><br>
-                    <p>SAUVIGNON BLANC, Hunky Dory, Marlborough, New Zealand 2022 </p>
+                    <p>BAROLO, Fratelli Revello, Piedmont 2018</p>
                 </div>
             </div>
         </section>
@@ -188,7 +182,7 @@
                 <a href="index.html#shedule">Working Hours</a>
                 <a href="index.html#chefs">Chefs</a>
                 <a href="index.html#reservation">Reservation</a>
-                <a href="aboutus.html">AboutUs</a>
+                <a href="about_us.html">AboutUs</a>
                 <a href="#footer">Contacts</a>
             </div>
             <div class="foticon">
