--- a/menu.html
+++ b/menu.html
@@ -40,7 +40,7 @@
                     <li><a href="index.html#shedule" class="navhov"> Working Hours</a></li>
                     <li><a href="index.html#chefs" class="navhov"> Chefs</a></li>
                     <li><a href="index.html#reservation" class="navhov"> Reservation</a></li>
-                    <li><a href="aboutus.html" class="navhov"> About US</a></li>
+                    <li><a href="about_us.html" class="navhov"> About US</a></li>
                     <li><a href="#footer" class="navhov"> Contacts</a></li>
                 </ul>
             </nav>
@@ -51,7 +51,7 @@
         </div>
         <div class="menuheadcontainer">
             <div id="menuhead">
-                <a href="aboutus.html"><p class="navhov">About Us</p></a>
+                <a href="about_us.html"><p class="navhov">About Us</p></a>
             </div>
         </div>
     </header>
@@ -63,11 +63,11 @@
                     <h2>Standart Menu</h2>
                 </a>
 
-                <a href="specialmenu.html#mainmenu" class="navhov">
+                <a href="special_menu.html#mainmenu" class="navhov">
                     <h2>Special Menu</h2>
                 </a>
 
-                <a href="gourmentmenu.html#mainmenu"  class="navhov">
+                <a href="gourment_menu.html#mainmenu"  class="navhov">
                     <h2>Gourment Menu</h2>
                 </a>
             </div>
@@ -183,7 +183,7 @@
                 <a href="index.html#shedule">Working Hours</a>
                 <a href="index.html#chefs">Chefs</a>
                 <a href="index.html#reservation">Reservation</a>
-                <a href="aboutus.html">AboutUs</a>
+                <a href="about_us.html">AboutUs</a>
                 <a href="#footer">Contacts</a>
             </div>
             <div class="foticon">
