--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <li><a href="#shedule" class="navhov"> Working Hours</a></li>
                     <li><a href="#chefs" class="navhov"> Chefs</a></li>
                     <li><a href="#reservation" class="navhov"> Reservation</a></li>
-                    <li><a href="aboutus.html" class="navhov"> About US</a></li>
+                    <li><a href="about_us.html" class="navhov"> About US</a></li>
                     <li><a href="#footer" class="navhov"> Contacts</a></li>
                 </ul>
             </nav>
@@ -155,7 +155,7 @@
                 <a href="index.html#shedule">Working Hours</a>
                 <a href="index.html#chefs">Chefs</a>
                 <a href="index.html#reservation">Reservation</a>
-                <a href="aboutus.html">AboutUs</a>
+                <a href="about_us.html">AboutUs</a>
                 <a href="#footer">Contacts</a>
             </div>
             <div class="foticon">
